# OrangePi5_SPI_LCD

./: CMakeLists.txt  main.cpp
include/spi_lcd/: ILI9486.hpp  ISPI.hpp
src/: ILI9486.cpp  ILI9486_Commands.hpp  color.hpp  tp.cpp  tp.hpp
